--- a/SCui/RegisterUser.html
+++ b/SCui/RegisterUser.html
@@ -18,10 +18,10 @@
                 <input placeholder="Your Email Address" type="email" tabindex="2" required>
             </fieldset>
             <fieldset>
-                <input placeholder="Username" type="tel" tabindex="3" required>
+                <input placeholder="Username" type="text" tabindex="3" required>
             </fieldset>
             <fieldset>
-                <input placeholder="Password" type="url" tabindex="4" required>
+                <input placeholder="Password" type="password" tabindex="4" required>
             </fieldset>
             <fieldset>
                 <input type="text" placeholder="Kovan Ethereum Address" tabindex="5" required></input>
