--- a/SCui/SignIn.html
+++ b/SCui/SignIn.html
@@ -14,7 +14,7 @@
                 <input placeholder="Username" type="text" tabindex="1" required autofocus>
             </fieldset>
             <fieldset>
-                <input placeholder="Password" type="url" tabindex="4" required>
+                <input placeholder="Password" type="password" tabindex="4" required>
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Sign In</button>
