Working Front End

--- a/SCui/Register.html
+++ b/SCui/Register.html
@@ -5,7 +5,7 @@
     <title>SoundCoin</title>
     <link rel="stylesheet" href="App.css">
 </head>
-<body>
+<body style="background-color: black">
 <div class="App">
     <div class="App-right">
         <form action="RegisterUser.html">
@@ -16,7 +16,7 @@
         </form>
     </div>
     <header class="App-header">
-        <img class="App-logo" alt="logo" />
+        <img class="App-logo" alt="logo" src="images/soundcoin-logo.png" />
         <h1 class="Welcome-font">SoundCoin</h1>
         <div class="App-right">
             <h2 class="drake-new-release">DRAKE'S NEW RELEASE</h2>
