--- a/SCui/SignIn.html
+++ b/SCui/SignIn.html
@@ -8,7 +8,7 @@
 <body>
 <div class="App4">
     <div class="container">
-        <form id="contact" action="" method="post">
+        <form id="contact" action="PlayMusic.html" method="post">
             <h3>Sign In</h3>
             <fieldset>
                 <input placeholder="Username" type="text" tabindex="1" required autofocus>
@@ -19,7 +19,7 @@
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Sign In</button>
             </fieldset>
-            <p class="copyright">SoundCoin Corp</p>
+            <a href="Register.html" style="text-decoration: none; color: #FFFFFF"><p class="copyright">SoundCoin Corp</p> </a>
         </form>
     </div>
 </div>
