--- a/SCui/PlayMusic.html
+++ b/SCui/PlayMusic.html
@@ -7,7 +7,7 @@
 </head>
 <body class="app4">
 <div align="center" style="padding-top: 25px">
-    <iframe align="center" src="https://open.spotify.com/embed?uri=spotify:album:4US3nmuLIKELhVZdBPiKxx" width="800" height="801" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe align="center" src="https://open.spotify.com/embed?uri=spotify:album:4tedCRHFkPOlzi6HR54tqd?si" width="800" height="801" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 
 </body>
