--- a/SCui/Register.html
+++ b/SCui/Register.html
@@ -19,9 +19,9 @@
         <img class="App-logo" alt="logo" src="images/soundcoin-logo.png" />
         <h1 class="Welcome-font">SoundCoin</h1>
         <div class="App-right">
-            <h2 class="drake-new-release">DRAKE'S NEW RELEASE</h2>
-            <h2 class="drake-gods-plan">GOD'S PLAN</h2>
-            <h2 class="learn-more">LEARN MORE...</h2>
+            <h2 class="drake-new-release"></h2>
+            <h2 class="drake-gods-plan"></h2>
+            <h2 class="learn-more"></h2>
         </div>
     </header>
 </div>
